# kowito-json

./: .gitignore  BENCHMARK_REPORT.md  Cargo.toml  FEATURE_COMPARISON.md  LICENSE  README.md  rust-toolchain.toml
.github/workflows/: publish.yml
benches/: parser.rs  serialize.rs
examples/: 01_basic_serialize.rs  02_all_types.rs  03_advanced_types.rs  04_arena_scratch.rs  05_scanner.rs  06_hot_loop.rs  07_manual_serialize.rs  08_string_escape.rs  09_serde_compat.rs  basic.rs
kjson-derive/: Cargo.toml
kjson-derive/src/: lib.rs
kowito-derive/: Cargo.toml
kowito-derive/src/: lib.rs
kowito-json-derive/: Cargo.toml
kowito-json-derive/src/: lib.rs
src/: arena.rs  check.rs  error.rs  lib.rs  parse.rs  scanner.rs  serde_ser.rs  string.rs  value.rs  view.rs
src/scanner/: amx.rs  avx2.rs  generic.rs  mod.rs  neon.rs  sve2.rs
src/serialize/: mod.rs
tests/: serialization.rs
