[package]
name = "kjson"
version = "0.2.0"
edition = "2024"
authors = ["Kowito <hi@kowito.com>"]
description = "The fastest JSON parser on Earth. Zero-decode, SIMD optimized."
repository = "https://github.com/Kowito/kowito-json"
license = "MIT"
[workspace]
members = ["kjson-derive"]

[dependencies]
kjson-derive = { path = "kjson-derive" }
fxhash = "0.2.1"
pulp = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }

[dev-dependencies]
criterion = "0.8.2"
serde_json = "1.0.149"
simd-json = "0.17.0"
sonic-rs = "0.5.7"

[[bench]]
name = "parser"
harness = false
