[package]
name = "kowito-json"
version = "0.2.0"
edition = "2024"
authors = ["Kowito <hi@kowito.com>"]
description = "A high-performance zero-decode JSON parser using SIMD, ARM NEON PMULL, and schema JIT binding."
repository = "https://github.com/Kowito/kowito-json"
license = "MIT"
[workspace]
members = ["kowito-json-derive"]

[dependencies]
kowito-json-derive = { path = "kowito-json-derive" }
fxhash = "0.2.1"
pulp = "0.22.2"
serde = { version = "1.0.228", features = ["derive"] }
itoa = "1.0.17"
ryu = "1.0.23"

[dev-dependencies]
criterion = "0.8.2"
serde_json = "1.0.149"
simd-json = "0.17.0"
sonic-rs = "0.5.7"

[[bench]]
name = "parser"
harness = false

[[bench]]
name = "serialize"
harness = false
