[package]
name = "kowito-json-derive"
version = "0.2.5"
edition = "2024"
authors = ["Kowito <hi@kowito.com>"]
description = "Specialized proc-macros for kowito-json's Schema-JIT parsing and serialization."
repository = "https://github.com/Kowito/kowito-json"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
itoa = "1.0.17"
ryu = "1.0.23"
